[package]
edition = "2021"
name = "htlnm"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
chrono = {version = "0.4.38", features = ["serde", "clock"]}
clap = {version = "4.5.10", features = ["derive", "string"]}
dirs = "5.0.1"
handlebars = "5.1.2"
reqwest = {version = "0.11.27", features = ["json", "blocking"]}
rpassword = "7.3.1"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
time = {version = "0.3.36", features = ["parsing"]}
